 $ Added README.md file;

 to implement:
 ** Urgent:

 ** Future implementation reminders:
 # Move user_interface() and evaluate_expression() into separate functions;
 # Edge cases;